typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserIfStatement2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            17,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserIfStatement2.ts:1:5
  |
1 | if (a) {
  |     ^

